<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Expy</string>
    <string name="ugm" translatable="false">Universitas Gadjah Mada</string>
    <string name="arief" translatable="false">Arief Zuhri</string>
    <string name="angger" translatable="false">Gabriela Anggerita Jasmin</string>
    <string name="notification_message_expiration_reminder" translatable="false">EXP: %1$s</string>
    <string name="loading">Loading…</string>
    <string name="monitored">Monitored</string>
    <string name="expired">Expired</string>
    <string name="start_now">Start Now</string>
    <string name="about">About</string>
    <string name="title_about">About Application</string>
    <string name="title_add_product">Add Product</string>
    <string name="product_name">Product name</string>
    <string name="help">Help</string>
    <string name="expiry_date_bb">Expired date/best before</string>
    <string name="opened_date">Opened date</string>
    <string name="pao_month">PAO (month)</string>
    <string name="turn_on_reminders">Turn on reminder</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_help_pao">What is PAO?</string>
    <string name="pao_example">6M = 6 months</string>
    <string name="add_product">Add product</string>
    <string name="title_profile">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="send_link">Send Link</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="desc_welcome">Login to continue</string>
    <string name="or">or</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="title_update_product">Update Product</string>
    <string name="title_onboarding_2">Get Notifications</string>
    <string name="title_onboarding_3">Easier with Widget</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="dialog_title_delete_product">Delete Product</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="hint_full_name">Enter full name</string>
    <string name="hint_password">Enter password</string>
    <string name="invalid_password_confirmation">Password is incorrect</string>
    <string name="help_pao">Period After Opening or PAO is a packaging label on cosmetics that shows the safe limit for use after opening. If it says 6M, the safe limit for using the cosmetic product is 6 months after opening.  If your product has been opened, you can check this option and enter the date it was opened and the PAO as stated on the package.</string>
    <string name="has_pao">Has it been opened and has PAO?</string>
    <string name="turn_on_reminders_hint">Reminders will appear periodically before your product expires.</string>
    <string name="hint_reset_password">A link to change your password will be sent to your email.</string>
    <string name="hint_register">Don\'t have an account yet?</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="title_empty">No records yet</string>
    <string name="desc_empty">Let\'s add products for you to monitor</string>
    <string name="title_onboarding_1">Monitor Expiration Date</string>
    <string name="desc_onboarding_1">Write down the expiration date so you don\'t forget it anymore</string>
    <string name="desc_onboarding_2">Receive periodic notifications when the expiration date is approaching</string>
    <string name="desc_onboarding_3">Install the widget on the home screen for faster monitoring access</string>
    <string name="dialog_title_cancel_editing">Undo changes</string>
    <string name="dialog_message_cancel_editing">You haven\'t saved your changes. Are you sure you want to cancel it?</string>
    <string name="dialog_message_delete_product">Are you sure you want to delete the %1$s record?</string>
    <string name="day_after_tomorrow">2 days to go</string>
    <string name="toast_error_get_product">Data failed to load, pull down to reload</string>
    <string name="toast_empty_fields">Make sure all fields are filled</string>
    <string name="no_empty_field">This column cannot be empty</string>
    <string name="hint_create_password">Enter at least 8 characters with a combination of 1 uppercase letter, lowercase letter, number digit and special character</string>
    <string name="hint_email">Enter a valid email</string>
    <string name="hint_date_picker">Click to select date</string>
    <string name="failure_register_with_email">Email is already registered</string>
    <string name="failure_login_with_email">Password is incorrect</string>
    <string name="success_send_email_verification">Check your email\'s inbox to verify account</string>
    <string name="failure_send_email_verification">Link failed to send, please try again later</string>
    <string name="success_send_password_reset">Check your email\'s inbox to reset password</string>
    <string name="failure_send_password_reset">Email is not registered</string>
    <string name="failure_logout">Logout failed, please try again</string>
    <string name="failure_auth_with_google">Failed to connect your Google account, please try again</string>
    <string name="max_limit_number_of_digits">The number of digits exceeds the maximum limit</string>
    <string name="notification_title_expiration_reminder">{0,choice,0#%1$s %2$s has expired|0&lt;%1$s %2$s will expire}</string>
    <plurals name="number_of_days_remaining_countdown">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="number_of_days_remaining" tools:ignore="PluralsCandidate">%1$d day to go</string>
    <plurals name="number_of_weeks_remaining">
        <item quantity="one">%d week to go</item>
        <item quantity="other">%d weeks to go</item>
    </plurals>
    <plurals name="number_of_months_remaining">
        <item quantity="one">%d month to go</item>
        <item quantity="other">%d months to go</item>
    </plurals>
    <string name="stop_monitoring">Stop monitoring</string>
    <string name="stop_monitoring_hint">If you\'ve used up this product before the expiration date, you don\'t need to monitor it anymore.</string>
    <string name="toast_data_failed_to_load">Data failed to load, please try again</string>
    <string name="meet_the_team">Meet the team</string>
</resources>